# recomendation_tool

./: .gitignore  README.md
GUI/: GUIsetup.py  recommendationtool.kv  setup.py
GUI/MyGraphModule.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
data/: CMakeLists.txt  graph.cpp  graph.h  graph_io.h  movie.h  new_graph.h  show.h
data/src/: CMakeLists.txt  graph.h  graph_io.h  media.h  movie.h  new_graph.h
data/src/wrappers/: CMakeLists.txt  graph_wrapper.cpp
data/test/: CMakeLists.txt  graph_test.cpp
web_scraper/: crawl.js  package.json
